# micromed-io

./: .buildinfo  .gitattributes  .gitignore  LICENSE  README.md  README.rst  api.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: api.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/_auto_examples/: index.doctree  plot_read_trc.doctree  plot_trc_to_fif.doctree  sg_execution_times.doctree
.doctrees/_autosummary/: micromed_io.buffer.MicromedBuffer.doctree  micromed_io.buffer.doctree  micromed_io.doctree  micromed_io.header.ElectrodeReferences.doctree  micromed_io.header.MicromedHeader.doctree  micromed_io.header.doctree  micromed_io.in_out.MicromedIO.doctree  micromed_io.in_out.doctree  micromed_io.tcp.MicromedPacketType.doctree  micromed_io.tcp.decode_tcp_header_packet.doctree  micromed_io.tcp.decode_tcp_marker_packet.doctree  micromed_io.tcp.doctree  (+8 more)
_auto_examples/: index.html  plot_read_trc.html  plot_trc_to_fif.html  sg_execution_times.html
_autosummary/: micromed_io.buffer.MicromedBuffer.html  micromed_io.buffer.html  micromed_io.header.ElectrodeReferences.html  micromed_io.header.MicromedHeader.html  micromed_io.header.html  micromed_io.html  micromed_io.in_out.MicromedIO.html  micromed_io.in_out.html  micromed_io.tcp.MicromedPacketType.html  micromed_io.tcp.decode_tcp_header_packet.html  micromed_io.tcp.decode_tcp_marker_packet.html  micromed_io.tcp.decode_tcp_note_packet.html  micromed_io.tcp.encode_marker_packet.html  micromed_io.tcp.encode_note_packet.html  micromed_io.tcp.get_tcp_header.html  micromed_io.tcp.html  micromed_io.to_mne.create_mne_from_micromed_recording.html  micromed_io.to_mne.html  micromed_io.trc.MicromedTRC.html  micromed_io.trc.html
_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: copybutton.js
data/: sample.TRC
examples/: README.rst  plot_trc_to_fif.py
micromed_io/: __init__.py  buffer.py  emulate_trc_tcpip.py  header.py  in_out.py  read_tcp_to_lsl.py  tcp.py  to_mne.py  trc.py
scripts/: emulate_trc_tcpip.py  read_tcp_to_epoch.py
tests/: test_micromed_io.py  test_to_mne.py  test_trc.py
(+37 files in other folders)
