[tool.poetry]
name = "micromed-io"
version = "0.3.8"
description = "A library to read, emulate, and forward Micromed data in standard formats"
authors = ["Etienne de MONTALIVET <etienne.demontalivet@protonmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mne = "^1.0.0"
click = "^8.1.7"
pylsl = "^1.16.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
mmio_emulate_trc = "micromed_io.scripts.emulate_online_trc:run"
mmio_tcp_to_lsl = "micromed_io.scripts.tcp_to_lsl:run"
mmio_rename_trc = "micromed_io.scripts.rename_trc:run"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
numpydoc = "^1.6.0"
pydata-sphinx-theme = "^0.14.4"
sphinx-gallery = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
